# robo-pointer-so100

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENCE  README.md  docker-compose.yml  h origin id2-angle-comp-debug  requirements.txt  start_robot.sh
.cache/calibration/so100/: main_follower.json
.github/workflows/: pure-python-tests.yml  ros-python-tests.yml
docker/: entrypoint.sh  start_robot.sh
docs/cheatsheets/: pid-kinematics-testing.md
scripts/: env.sh  start_robot.sh  test.sh
src/robo_pointer_visual/: package.xml  setup.cfg  setup.py
src/robo_pointer_visual/config/: demo_mock.yaml  demo_real.yaml  manual_calibration_follower.json  params.yaml
src/robo_pointer_visual/launch/: pipeline.launch.py
src/robo_pointer_visual/robo_pointer_visual/: check_env.py  dummy_robot_interface.py  gravity_comp_node.py  kinematics.py  mock_robot_interface_node.py  real_robot_interface.py  robot_controller_node.py  test_sdk_standalone.py  vision_node.py
src/robo_pointer_visual/test/: test_calibration_edges.py  test_calibration_logic.py  test_controller_safety.py  test_kinematics.py  test_kinematics_extra.py  test_launch_pipeline_structure.py  test_mock_interface.py
src/so100_description/: CMakeLists.txt  package.xml
src/so100_description/launch/: display.launch  display.launch.py  gazebo.launch
src/so100_description/urdf/: SO_5DOF_ARM100_8j_URDF.SLDASM.csv  SO_5DOF_ARM100_8j_URDF.SLDASM.urdf
