<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so100_description</name>
  <version>1.0.0</version>
  <description>URDF Description package for the SO-ARM100 5/6 DOF robot arm.</description>
  <maintainer email="b.koensgen@gmail.com">Benjamin Koensgen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>urdf</depend> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>